# task_manager

./: .dockerignore  .editorconfig  .env  .gitignore  .hadolint.yaml  Dockerfile  Dockerfile-dev  LICENSE  README.md  cr_deploy.sh  deploy.sh  docker-compose.yml  dump_db.sh  issues.txt  reset_db.sh  upload_api_docs.sh
server/: .dockerignore  .env.example  .env.test  .gitignore  .pylintrc  check_task_schedules.sh  clean_pytest.sh  conftest.py  copy_requirements.cmd  copy_requirements.sh  dev-requirements.in  dev-requirements.txt  docker-entrypoint.sh  enforce_usage_limits.sh  manage.py  migrate_and_load_dynamic_fixtures.sh  migrate_and_runserver.sh  mypy.ini  mypy_django.ini  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.in  requirements.txt
server/processes/: admin.py  apps.py  permissions.py  signal_handlers.py  urls.py
server/processes/authentication/: __init__.py  allow_bad_jwt_token_authentication.py  legacy_saas_token_authentication.py  saas_token_authentication.py
server/processes/common/: __init__.py  aws.py  db.py  notification.py  pagerduty.py  request_helpers.py  usage_limits.py  utils.py
server/processes/exception/: __init__.py  committable_exception.py  friendly_exception_handler.py  notification_rate_limit_exceeded_exception.py  unprocessable_entity.py
server/processes/execution_methods/: __init__.py  aws_base_execution_method.py  aws_cloudwatch_scheduling_settings.py  aws_codebuild_execution_method.py  aws_ecs_execution_method.py  aws_lambda_execution_method.py  aws_settings.py  execution_method.py  infrastructure_settings.py  unknown_execution_method.py
server/processes/fixtures/: 0001_create_enterprise_plan.py  0002_create_admin_user.py  0003_create_sample_customer.py
server/processes/migrations/: 0001_initial.py  0002_auto_20190611_1005.py  0003_auto_20190617_0337.py  0004_auto_20190617_0347.py  0005_auto_20190617_0624.py  0006_auto_20190620_0904.py  0007_auto_20190622_0206.py  0008_saastoken.py  0009_auto_20190623_0552.py  0010_auto_20190623_0609.py  0011_auto_20190630_0746.py  0012_auto_20190630_0808.py  0013_auto_20190701_0439.py  0014_runenvironment_aws_ecs_supported_launch_types.py  0015_auto_20190703_0850.py  0016_userprofile.py  0017_auto_20190710_0903.py  0018_auto_20190710_0918.py  0019_auto_20190722_0643.py  0020_auto_20190723_0541.py  0021_auto_20190723_0642.py  0022_auto_20190724_0718.py  0023_auto_20190725_0523.py  0024_processexecution_aws_subnets.py  0025_runenvironment_aws_default_subnets.py  0026_processtype_aws_default_subnets.py  0027_auto_20190725_0659.py  0028_processtype_aws_ecs_main_container_name.py  0029_processtype_aws_scheduled_event_rule_arn.py  0030_runenvironment_aws_events_role_arn.py  0031_auto_20190727_1949.py  0032_processtype_aws_event_target_rule_name.py  0033_runenvironment_aws_default_region.py  0034_auto_20190728_1709.py  0035_auto_20190728_1724.py  0036_auto_20190729_0636.py  0037_auto_20190729_0645.py  0038_processtype_environment_variables_overrides.py  0039_auto_20190817_2231.py  0040_auto_20190818_0713.py  (+200 more)
server/processes/models/: __init__.py  alert.py  alert_method.py  alert_send_status.py  apprise_notification_delivery_method.py  aws_ecs_configuration.py  aws_ecs_service_load_balancer_details.py  aws_tagged_entity.py  convert_legacy_em_and_infra.py  delayed_process_start_alert.py  delayed_process_start_detection_event.py  delayed_task_execution_start_event.py  email_notification_delivery_method.py  email_notification_profile.py  event.py  execution.py  execution_probabilities.py  execution_status_change_event.py  group_info.py  heartbeat_detection_alert.py  heartbeat_detection_event.py  infrastructure_configuration.py  insufficient_service_instances_alert.py  insufficient_service_instances_event.py  insufficient_service_task_executions_event.py  invitation.py  legacy_heartbeat_detection_alert.py  legacy_heartbeat_detection_event.py  legacy_insufficient_service_instances_event.py  legacy_missing_scheduled_execution.py  legacy_missing_scheduled_task_execution.py  legacy_missing_scheduled_task_execution_alert.py  legacy_missing_scheduled_workflow_execution.py  legacy_missing_scheduled_workflow_execution_alert.py  legacy_task_execution_detection_event.py  missing_heartbeat_detection_event.py  missing_scheduled_execution.py  missing_scheduled_execution_event.py  missing_scheduled_task_execution.py  missing_scheduled_task_execution_alert.py  (+41 more)
server/processes/serializers/: __init__.py  alert_method_serializer.py  apprise_notification_delivery_method_serializer.py  aws_ecs_execution_method_capability_serializer.py  aws_ecs_execution_method_capability_stopgap_serializer.py  aws_ecs_execution_method_serializer.py  aws_ecs_run_environment_execution_method_capability_serializer.py  aws_ecs_service_load_balancer_details_serializer.py  aws_ecs_service_options_serializer.py  aws_ecs_task_definition_serializer.py  base_aws_ecs_execution_method_serializer.py  base_execution_method_capability_serializer.py  base_execution_method_serializer.py  basic_event_serializer.py  delayed_process_start_detection_event_serializer.py  delayed_task_execution_start_event_serializer.py  delayed_task_start_detection_event_serializer.py  email_notification_delivery_method_serializer.py  email_notification_profile_serializer.py  embedded_id_validating_serializer_mixin.py  (+44 more)
server/schema/: cloudreactor-openapi3.yml
server/spectacular/: __init__.py  hooks.py
server/sql/: initial.sql
server/static/: keep.txt
server/task_manager/: settings.py  urls.py  wsgi.py
(+406 files in other folders)
